--- a/themes/metrumy/sass/_syntaxhl.scss
+++ b/themes/metrumy/sass/_syntaxhl.scss
@@ -47,7 +47,7 @@
   .sb { color: $text-color } /* Literal.String.Backtick */
   .sc { color: $text-color } /* Literal.String.Char */
   .sd { color: $text-color } /* Literal.String.Doc */
-  .s2 { color: $text-color } /* Literal.String.Double */
+  .s2 { color: $purple } /* Literal.String.Double */
   .se { color: $text-color } /* Literal.String.Escape */
   .sh { color: $text-color } /* Literal.String.Heredoc */
   .si { color: $text-color } /* Literal.String.Interpol */
