--- a/themes/metrumy/sass/_base.scss
+++ b/themes/metrumy/sass/_base.scss
@@ -24,11 +24,11 @@ body {
 a {
   color: $text-color;
   text-decoration: none;
-  border-bottom: 1px solid $purple;
+  border-bottom: 1px solid $purple-light;
   transition: border 0.1s ease-in;
 
   &:active, &:hover {
-    border-bottom: 2px solid $purple;
+    border-bottom: 2px solid $purple-light;
   }
 }
 
@@ -232,7 +232,7 @@ a.nav--logo:hover {
 }  
 
 a.nav--logo:hover #svg-logo--path {
-  fill: $brand-purple !important;
+  fill: $purple-light !important;
   transition: fill 0.2s ease-in;
 } 
 
