--- a/themes/metrumy/layouts/_default/landing.html
+++ b/themes/metrumy/layouts/_default/landing.html
@@ -17,7 +17,15 @@
     <li>testability (easy to A/B test modules)</li>
     <li>not being pain in the ass for copywriters (simple layout)</li>
   </ul>
+
+  <p class="work--paragraph-big">
+    There are many factors that make a product page design sell better.
+    But there's only a few that repetitively give big impact.
+  </p>
+  
 </div>
+
+
 
 <div class="work--contact">
   <h2 class="work--contact--title">Send me an email:</h2>
