--- a/themes/metrumy/sass/_variables.scss
+++ b/themes/metrumy/sass/_variables.scss
@@ -14,7 +14,7 @@ $green-dark:          #004010;
 $green-light:         #33dd55;
 $blue:                #2233dd;
 $blue-dark:             darken($blue, 10%);
-$blue-light:          #11aaff;
+$blue-light:          #44aaee;
 $blue-skye:           #ddeeee;
 $aquamarine:          #77ddff;
 $purple:              #5500aa;
