--- a/themes/metrumy/sass/_work.scss
+++ b/themes/metrumy/sass/_work.scss
@@ -1,34 +1,112 @@
-.work--text {
-  font-size: fl(7);
-  //@include space(margin, 0, auto, 10, auto);
+.work--masthead {
+  padding: 0 1rem scale1(11);
+}
+
+.work--masthead--content {
   @include wrapper-mid;
-  padding: 0 1em;
+  padding: scale1(0) 1rem;
+
+  @media (max-width: $screen-sml) {
+    padding: scale2(0) 1rem;
+  }
+}
+
+@mixin standard-margin {
+  margin-top: scale1(14);
+  margin-bottom: scale1(14);
+  @media (max-width: $screen-sml) {
+    margin-top: scale2(14);
+    margin-bottom: scale2(14);
+  }
+}
+
+.work--miniarticle {
+  @include standard-margin;
+}
+
+.work--miniarticle--title {
+  font-size: scale1(12);
+  line-height: 1;
+  margin-top: scale1(11);
+  margin-bottom: scale1(11);
+  
+  @media (max-width: $screen-sml) {
+    font-size: scale2(12);
+    margin-top: scale2(11);
+    margin-bottom: scale2(11);
+  }
+}
+
+.work--body {
+  font-size: 1rem;
+  @include wrapper-mid;
+  padding: 0 1rem;
 }
 
 .work--title {
-  font-size: fl(7);
+  font-size: scale1(14);
   line-height: 1;
-  // @include space(margin, 10, 0, 10, 0);
+  margin-top: scale1(14);
+  margin-bottom: scale1(14);
+  
+  @media (max-width: $screen-sml) {
+    font-size: scale2(13);
+    margin-top: scale2(13);
+    margin-bottom: scale2(13);
+  }
+
+}
+
+.work--paragraph-big {
+  font-size: scale1(11);
+  margin-top: scale1(11);
+  margin-bottom: scale1(11);
+  
+  @media (max-width: $screen-sml) {
+    font-size: scale2(11);
+    margin-top: scale2(11);
+    margin-bottom: scale2(11);
+  }
 }
 
 .work--contact {
-  font-size: fl(7);
-  //@include space(margin, 0, 0, 10, 0); 
+  font-size: scale1(12);
   @include wrapper-mid;
-  padding: 0 0.66em;
-  border-left: 0.33em solid $blue-light;
+  margin-top: scale1(14);
+  margin-bottom: scale1(14);
+  padding: 0 1rem 0 0.66rem;
+  border-left: 0.33rem solid $blue-light;
+  @media (max-width: $screen-sml) {
+    font-size: scale2(11);
+    margin-top: scale2(14);
+    margin-bottom: scale2(14);
+  }
 }
 
-.work--contact--content {
-
+.work--list li {
 }
 
 .work--contact--title {
-  font-size: fl(9);
+  font-size: scale1(11);
+  font-weight: bold;
+  @media (max-width: $screen-sml) {
+    font-size: scale2(11);
+  }
   margin: 0;
 }
 
 .work--contact--addr a {
-  font-size: fl(7);
+  font-size: scale1(11);
+  @media (max-width: $screen-sml) {
+    font-size: scale2(11);
+  }
   color: $orange-deep;
+}
+
+.work--highlight {
+  color: $orange-deep;
+}
+
+.work--highlight-2 {
+  color: $blue-light;
 }
