--- a/themes/metrumy/sass/_base.scss
+++ b/themes/metrumy/sass/_base.scss
@@ -68,20 +68,19 @@ section {
 }
 
 .wrapper--media-background {
-  background-color: $night;
+  background-color: #000;
   width: 100%;
   margin: 0;
 }
 
 .wrapper--media-background-top {
-  background-color: $night;
+  background-color: #000;
   width: 100%;
   margin: 0;
-  margin-top: -(scale1(12));
-  padding: 2em 0 0;
+  margin-top: -2em;
+  padding: 0;
   @media (max-width: $screen-big) {
-    margin-top: -scale2(12);
-    padding: 0;
+
   }
 }
 
