--- a/themes/metrumy/sass/_typography.scss
+++ b/themes/metrumy/sass/_typography.scss
@@ -2,7 +2,6 @@ p {
   color: $text-color;
   font-size: 1rem;
   text-align: left;
-  text-indent: 1rem;
   margin: 0 auto 1rem;
 }
 
@@ -160,7 +159,27 @@ li code {
 }
 
 .article-title {
-  
+  font-size: scale1(13);
+  font-weight: 600;
+  line-height: 1;
+  letter-spacing: -0.01em;
+  margin-top: scale1(14);
+  margin-bottom: scale1(14);
+
+  @media (max-width: $screen-sml) {
+    font-size: scale2(13);
+    margin-top: scale2(13);
+    margin-bottom: scale2(13);
+  }  
+}
+
+.article-title--video {
+  font-size: scale1(12);
+  font-weight: 600;
+  line-height: 1;
+  letter-spacing: -0.01em;
+  margin-top: scale1(12);
+  margin-bottom: scale1(11);   
 }
 
 small,
