--- a/themes/metrumy/sass/_variables.scss
+++ b/themes/metrumy/sass/_variables.scss
@@ -4,7 +4,7 @@ $base-line-height:      1.5;
 
 // colors
 $text-color:          #383838;
-$background-color:    #f5f3f1;
+$background-color:    #fffefd;
 $black:               #222;
 $white:               #fff;
 $red:                 #ee1144;
