redesign 'work' page

--- a/themes/metrumy/layouts/_default/landing.html
+++ b/themes/metrumy/layouts/_default/landing.html
@@ -9,65 +9,66 @@
     It's about <span class="work--highlight-2">coding</span> to <span class="work--highlight-2">sell</span>.</h1>
   
   <p class="p--big">
-    There are many factors that make a product page design sell better.
-    But there's only a few that repetitively give big impact.
+    Building interactive product presentations using new technologies creatively, yet keeping it simple and snappy.
   </p>
   </div>
 </div>
 
 <div class="work--body">
 
-  <section class="work--miniarticle">
 
-    <h2 class="work--miniarticle--title">Smart image loading</h2>
 
-    <p class="">
-      On the beginning only the most important pictures are being downloaded. That way they will show up faster.
-      Less important (below the fold) ones are waiting (max. 2 sec.) for their turn without using bandwidth.
-    </p>
+    <section class="work--miniarticle">
 
-  </section>
+      <h2 class="work--miniarticle--title">Modular, Easy to Test and Rearrange</h2>
 
-  <section class="work--miniarticle">
+      <p class="">
+        All patterns like a headline, a call to action button or a gallery
+        are in a form of modules that can be rearranged.
+        They look good in any order.
+        No need need to write additional code to change a page structure.
+      </p>
 
-    <h2 class="work--miniarticle--title">Vanilla JavaScript</h2>
+    </section>
 
-    <p class="">
-      Scripts are small and to the purpose. I like pure functions. I don't like inheritance.
-      It doesn't mean I'm about purely functional programming. Mutable state can be useful.
-    </p>
+    <section class="work--miniarticle">
 
-  </section>
+      <h2 class="work--miniarticle--title">Just what's needed</h2>
 
-  <section class="work--miniarticle">
+      <p class="">
+        Everything is based on familiar, battle-tested UI patterns.
+        No fancy animations and illustrations that don't do anything except looking cool.
+        Layouts are simple and proven – nothing new.
+        Fancy layouts lower usability (by being less familiar) and make responsive design hard (by adding variability).
+      </p>
 
-    <h2 class="work--miniarticle--title">Modular, Easy to Test and Rearrange</h2>
+    </section>
 
-    <p class="">
-      All patterns like a headline, a call to action button or a gallery
-      are in a form of modules that can be rearranged.
-      They look good in any order.
-      No need need to write additional code to change a page structure.
-    </p>
 
-  </section>
 
-  <section class="work--miniarticle">
+    <section class="work--miniarticle">
 
-    <h2 class="work--miniarticle--title">Just what's needed</h2>
+      <h2 class="work--miniarticle--title">Typography</h2>
 
-    <p class="">
-      Everything is based on familiar, battle-tested UI patterns.
-      No fancy animations and illustrations that don't do anything except looking cool.
-    </p>
+      <p class="">
+      People say “a picture is like a thousand words”, but very often it's a very vague way of presenting information. 
+      When you need to be precise, well design phrases and clean text are the key. That's why I like typography.
+      </p>
 
-    <p class="">
-      Layouts are simple and proven – nothing new.
-      Fancy layouts lower usability (by being less familiar) and make responsive design hard (by adding variability).
-    </p>
+    </section>
 
-  </section>
-  
+    <section class="work--miniarticle">
+
+      <h2 class="work--miniarticle--title">Vanilla JavaScript</h2>
+
+      <p class="">
+        Scripts are small and to the purpose. I use pure functions a lot. I don't like inheritance.
+        Things are kept in high composability – like a simple code library.
+        It helps in testing different ideas without a lot of code editing. 
+      </p>
+
+    </section>
+
 </div>
 
 
