--- a/themes/metrumy/sass/_work.scss
+++ b/themes/metrumy/sass/_work.scss
@@ -1,46 +1,17 @@
 .work--masthead {
-  padding: 0 1rem scale1(11);
+  @include wrapper-big;
 }
 
 .work--masthead--content {
-  @include wrapper-mid;
-  padding: scale1(0) 1rem;
-
-  @media (max-width: $screen-sml) {
-    padding: scale2(0) 1rem;
-  }
-}
-
-@mixin standard-margin {
-  margin-top: scale1(14);
-  margin-bottom: scale1(14);
-  @media (max-width: $screen-sml) {
-    margin-top: scale2(14);
-    margin-bottom: scale2(14);
-  }
-}
-
-.work--miniarticle {
-  @include standard-margin;
-}
-
-.work--miniarticle--title {
-  font-size: scale1(12);
-  line-height: 1;
-  margin-top: scale1(11);
-  margin-bottom: scale1(11);
   
-  @media (max-width: $screen-sml) {
-    font-size: scale2(12);
-    margin-top: scale2(11);
-    margin-bottom: scale2(11);
-  }
-}
-
-.work--body {
-  font-size: 1rem;
-  @include wrapper-mid;
+  max-width: $screen-mid;
+  margin: 0;
+  margin-bottom: scale1(15);
   padding: 0 1rem;
+
+  @media (max-width: $screen-sml) {
+    padding: 0 1rem;
+  }
 }
 
 .work--title {
@@ -54,31 +25,73 @@
     margin-top: scale2(13);
     margin-bottom: scale2(13);
   }
-
 }
 
 .work--paragraph-big {
   font-size: scale1(11);
-  margin-top: scale1(11);
+  margin-top: 0;
   margin-bottom: scale1(11);
   
   @media (max-width: $screen-sml) {
     font-size: scale2(11);
-    margin-top: scale2(11);
+    margin-top: 0;
     margin-bottom: scale2(11);
+  }
+}
+
+.work--body {
+  font-size: 1rem;
+  @include wrapper-big;
+  @include grid-50-50;
+  padding: 0 1rem;
+
+  @media (max-width: $screen-mid) {
+    @include wrapper-mid;
+  }
+}
+
+.work--miniarticle {
+  margin-top: 0;
+  margin-bottom: scale1(14);
+  @media (max-width: $screen-sml) {
+    margin-top: 0;
+    margin-bottom: scale2(13);
+  }
+}
+
+.work--miniarticle--title {
+  font-size: scale1(11);
+  line-height: 1;
+  margin-top: 0;
+  margin-bottom: scale1(11);
+  
+  @media (max-width: $screen-sml) {
+    font-size: scale2(11);
+    margin-top: 0;
+    margin-bottom: scale2(11);
+  }
+}
+
+.work--miniarticle p {
+  font-size: scale1(10);
+  margin: 0;
+  
+  @media (max-width: $screen-sml) {
+    font-size: scale2(10);
+
   }
 }
 
 .work--contact {
   font-size: scale1(12);
   @include wrapper-mid;
-  margin-top: scale1(14);
+  margin-top: scale1(12);
   margin-bottom: scale1(14);
   padding: 0 1rem 0 0.66rem;
   border-left: 0.33rem solid $blue-light;
   @media (max-width: $screen-sml) {
     font-size: scale2(11);
-    margin-top: scale2(14);
+    margin-top: scale2(12);
     margin-bottom: scale2(14);
   }
 }
