nav bar redesign

--- a/themes/metrumy/layouts/_default/landing.html
+++ b/themes/metrumy/layouts/_default/landing.html
@@ -1,6 +1,8 @@
 {{ partial "head.html" . }}
 <div class="work">
-{{ partial "mastheadMini.html" . }}
+
+{{ partial "topbar.html" . }}
+  
 
 <div class="work--masthead">
   <div class="work--masthead--content">
@@ -15,8 +17,6 @@
 </div>
 
 <div class="work--body">
-
-
 
     <section class="work--miniarticle">
 
