--- a/themes/metrumy/layouts/_default/single.html
+++ b/themes/metrumy/layouts/_default/single.html
@@ -1,6 +1,6 @@
 {{ partial "head.html" . }}
 
-{{ partial "mastheadMini.html" . }}
+{{ partial "topbar.html" . }}
 
 {{ partial "article.html" . }}
 
