--- a/themes/metrumy/layouts/404.html
+++ b/themes/metrumy/layouts/404.html
@@ -1,5 +1,5 @@
 {{ partial "head.html" . }}
-{{ partial "mastheadMini.html" . }}
+{{ partial "topbar.html" . }}
 
 <section class="article article--narrow">
     
