--- a/themes/metrumy/layouts/index.html
+++ b/themes/metrumy/layouts/index.html
@@ -1,5 +1,5 @@
 {{ partial "head.html" . }}
-{{ partial "mastheadMini.html" . }}
+{{ partial "topbar.html" . }}
 
 {{ partial "postList.html" . }}
 
