ui redesign (navbar and headlines)

--- a/themes/metrumy/layouts/_default/patterns.html
+++ b/themes/metrumy/layouts/_default/patterns.html
@@ -4,7 +4,7 @@
 
 <section class="patterns--section">
   <h2 class="patterns--title">navbar</h2>
-  {{ partial "navbar.html" . }}
+  {{ partial "topbar.html" . }}
   <div class="patterns--note">The logo is a part of the navbar.
     If it's 'sticky' you'll see it in the top left corner.</div>
 </section>
@@ -52,16 +52,6 @@
 
     </div>
   </div>
-</section>
-
-<section class="patterns--section">
-  <h2 class="patterns--title">home page post list</h2>
-  <div class="">{{ partial "postListHome.html" . }}</div>
-</section>
-
-<section class="patterns--section">
-  <h2 class="patterns--title">short publication list</h2>
-  {{ partial "top3.html" . }}
 </section>
 
 <section class="patterns--section">
