--- a/themes/metrumy/layouts/_default/landing.html
+++ b/themes/metrumy/layouts/_default/landing.html
@@ -1,14 +1,27 @@
 {{ partial "head.html" . }}
 <div class="work">
 
-{{ partial "topbar.html" . }}
-  
+<nav id="nav" class="topbar">
+
+  <div class="topbar--unit">
+      <a class="topbar--link" href="{{ .Site.BaseURL }}">
+          Blog
+      </a>
+  </div>
+
+  <div class="topbar--unit">
+      <a class="topbar--link topbar--link-current" href="{{ .Site.BaseURL }}/howiwork">
+          How I Work / About + Contact
+      </a>
+  </div>
+
+</nav>
 
 <div class="work--masthead">
   <div class="work--masthead--content">
   <h1 class="work--title">
     Hi, this is how I work.
-    It's about <span class="work--highlight-2">coding</span> to <span class="work--highlight-2">sell</span>.</h1>
+    It's about <span class=" ">coding</span> to <span class=" ">sell</span>.</h1>
   
   <p class="work--paragraph-big">
     Using new technologies creatively, yet keeping it simple and snappy.
