--- a/themes/metrumy/layouts/index.html
+++ b/themes/metrumy/layouts/index.html
@@ -1,6 +1,20 @@
 {{ partial "head.html" . }}
-{{ partial "topbar.html" . }}
+
+<nav id="nav" class="topbar">
+
+    <div class="topbar--unit">
+        <a class="topbar--link topbar--link-current" href="{{ .Site.BaseURL }}">
+            Blog
+        </a>
+    </div>
+
+    <div class="topbar--unit">
+        <a class="topbar--link" href="{{ .Site.BaseURL }}/howiwork">
+            How I Work / About + Contact
+        </a>
+    </div>
+
+</nav>
 
 {{ partial "postList.html" . }}
-
 {{ partial "footer.html" . }}
