--- a/themes/metrumy/sass/_topbar.scss
+++ b/themes/metrumy/sass/_topbar.scss
@@ -1,13 +1,14 @@
 .topbar {
-  background-color: transparent;
+  @include wrapper-big;  
   font-size: scale1(9);
   margin: 0 auto;
-  padding: scale1(8);
+  padding: 1rem;
   text-align: left;
+  
   @media (max-width: $screen-sml) {
     font-size: scale2(9);
     margin-bottom: scale2(13);
-    padding: scale2(8);
+    padding: 1rem;
     text-align: left;
   }
 }
@@ -16,15 +17,20 @@
   color: $background-color;
   font-size: scale1(9);
   font-weight: normal;
-  line-height: 1;
+  line-height: 1.5;
   letter-spacing: 0.075em;
-  margin: 0 auto;
+  margin: 0 auto 0.5em;
   text-transform: uppercase;
+
+  &:last-of-type {
+    margin-bottom: 0;
+  }
+
   @media (max-width: $screen-sml) {
     font-size: scale2(9);
   }  
 }
 
-.topbar--link {
-
+.topbar--link-current {
+  border-bottom-width: 3px;
 }
