--- a/themes/metrumy/sass/_work.scss
+++ b/themes/metrumy/sass/_work.scss
@@ -4,19 +4,21 @@
 
 .work--masthead--content {
   max-width: 820px;
-  margin: scale1(16) 0;
+  margin-top: scale1(16);
+  margin-bottom: scale1(16);
   padding: 0 1rem;
 
   @media (max-width: $screen-sml) {
     padding: 0 1rem;
-    margin: scale1(14) 0;
+    margin-top: scale2(15);
+    margin-bottom: scale2(15);
   }
 }
 
 .work--title {
-  font-size: scale1(14);
+  font-size: scale1(13);
   line-height: 1;
-  margin-bottom: scale1(8);
+  margin-bottom: scale1(7);
   
   @media (max-width: $screen-sml) {
     font-size: scale2(13);
