--- a/themes/metrumy/layouts/partials/head.html
+++ b/themes/metrumy/layouts/partials/head.html
@@ -16,7 +16,7 @@
   {{ if .RSSLink }}<link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml" title="{{ .Title }}" />{{ end }}
 
   <!--stylesheets-->
-  <link href="https://fonts.googleapis.com/css?family=Fira+Sans:400,400i,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,700" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="/dist/bundle.css">
 
   <link rel="icon" type="image/png" href="{{ .Site.BaseURL }}/icon152.png?v=2" sizes="152x152">
