--- a/themes/metrumy/sass/_variables.scss
+++ b/themes/metrumy/sass/_variables.scss
@@ -1,4 +1,4 @@
-$base-font-family:      "Fira Sans", sans-serif;
+$base-font-family:      "Source Sans Pro", sans-serif;
 $monospace:             monospace;
 $base-line-height:      1.5;
 
