--- a/themes/metrumy/sass/_lists.scss
+++ b/themes/metrumy/sass/_lists.scss
@@ -74,7 +74,7 @@ li ul {
 .post-list h1 {
   font-weight: bold;
   font-size: scale1(12);
-  font-weight: 600;
+  font-weight: bold;
   line-height: 1.25;
   color: $black;
   margin-top: 0.66em;
@@ -124,7 +124,7 @@ h2.post-list--post-title,
 h3.post-list--post-title {
   font-weight: bold;
   font-size: scale1(11);
-  font-weight: 600;
+  font-weight: bold;
   line-height: 1.25;
   color: $black;
   margin-top: scale1(10);
