--- a/themes/metrumy/sass/_typography.scss
+++ b/themes/metrumy/sass/_typography.scss
@@ -22,6 +22,7 @@ h2,
 h3,
 h4, {
   color: $black;
+  font-weight: bold;
   margin: 1em 0;
 }
 
@@ -34,7 +35,6 @@ h4 a {
 
 h1, .h1-like {
   font-size: scale1(13);
-  font-weight: 600;
   line-height: 1;
   letter-spacing: -0.01em;
   margin-top: scale1(13);
@@ -49,7 +49,6 @@ h1, .h1-like {
 
 h2, .h2-like {
   font-size: scale1(11);
-  font-weight: 600;
   line-height: 1.25;
   color: $black;
   margin-top: scale1(12);
@@ -64,7 +63,6 @@ h2, .h2-like {
 
 h3, .h3-like {
   font-size: scale1(10);
-  font-weight: 600;
   line-height: 1.25;
   margin-top: scale1(11);
   margin-bottom: scale1(10);
@@ -78,10 +76,9 @@ h3, .h3-like {
 
 h4, .h4-like {
   font-size: scale1(10);;
-  font-weight: 600;
   line-height: 1.5;
-    margin-top: scale1(11);
-    margin-bottom: scale1(10);
+  margin-top: scale1(11);
+  margin-bottom: scale1(10);
   
   @media (max-width: $screen-sml) {
     font-size: scale2(10);
@@ -151,7 +148,7 @@ li code {
 
 .article-title {
   font-size: scale1(13);
-  font-weight: 600;
+  font-weight: bold;
   line-height: 1;
   letter-spacing: -0.01em;
   margin-top: scale1(14);
@@ -166,7 +163,7 @@ li code {
 
 .article-title--video {
   font-size: scale1(12);
-  font-weight: 600;
+  font-weight: bold;
   line-height: 1;
   letter-spacing: -0.01em;
   margin-top: scale1(12);
