--- a/themes/metrumy/sass/_variables.scss
+++ b/themes/metrumy/sass/_variables.scss
@@ -15,7 +15,7 @@ $green-light:         #33dd55;
 $blue:                #2233dd;
 $blue-dark:             darken($blue, 10%);
 $blue-light:          #44aaee;
-$blue-skye:           #ddeeee;
+$blue-skye:           #cddddd;
 $aquamarine:          #77ddff;
 $purple:              #5500aa;
 $purple-light:        #7700ff;
@@ -23,7 +23,9 @@ $grey:                #777;
 $grey-light:            lighten($grey, 40%);
 $grey-dark:             darken($grey, 10%);
 
+$graphite:            #212121;
 $yellow:              #ffee66;
+$yellow-light:        #ffeedd;
 $background-yellow:   #ffee99;
 $orange:              #ff6622;
 $orange-light:        #ff9922;
