--- a/themes/metrumy/sass/_work.scss
+++ b/themes/metrumy/sass/_work.scss
@@ -1,16 +1,26 @@
+.work {
+  background-color: $graphite;
+
+  & h1, h2, h3, h4, p, nav, footer, a {
+    color: $blue-skye;
+  }
+}
+
+
 .work--masthead {
   @include wrapper-big;
 }
 
 .work--masthead--content {
+  font-size: 1rem;
   max-width: 820px;
-  margin-top: scale1(16);
-  margin-bottom: scale1(16);
+  margin-top: scale1(14);
+  margin-bottom: scale1(15);
   padding: 0 1rem;
 
   @media (max-width: $screen-sml) {
     padding: 0 1rem;
-    margin-top: scale2(15);
+    margin-top: scale2(14);
     margin-bottom: scale2(15);
   }
 }
@@ -52,6 +62,7 @@
 .work--miniarticle {
   margin-top: 0;
   margin-bottom: scale1(14);
+
   @media (max-width: $screen-sml) {
     margin-top: 0;
     margin-bottom: scale2(13);
@@ -74,6 +85,10 @@
 .work--miniarticle p {
   font-size: scale1(10);
   margin: 0;
+
+  @media (max-width: $screen-mid + 1px) {
+    font-size: scale2(10);
+  }
   
   @media (max-width: $screen-sml) {
     font-size: scale2(10);
@@ -82,12 +97,14 @@
 }
 
 .work--contact {
-  font-size: scale1(12);
   @include wrapper-mid;
+  border-left: 0.33rem solid $blue-light;
+  font-size: scale1(12);
+  line-height: 1.1;
   margin-top: scale1(12);
   margin-bottom: scale1(14);
   padding: 0 1rem 0 0.66rem;
-  border-left: 0.33rem solid $blue-light;
+
   @media (max-width: $screen-sml) {
     font-size: scale2(11);
     margin-top: scale2(12);
@@ -99,6 +116,7 @@
 }
 
 .work--contact--title {
+  color: $blue-skye;
   font-size: scale1(12);
   font-weight: bold;
   @media (max-width: $screen-sml) {
@@ -108,11 +126,11 @@
 }
 
 .work--contact--addr a {
+  color: $orange;
   font-size: scale1(11);
   @media (max-width: $screen-sml) {
     font-size: scale2(11);
   }
-  color: $orange-deep;
 }
 
 .work--highlight {
@@ -121,4 +139,13 @@
 
 .work--highlight-2 {
   color: $blue-light;
+}
+
+.work--myname {
+  @include wrapper-mid;
+  padding: 0 1rem;
+}
+
+.work .secondary {
+  color: $grey;
 }
