--- a/themes/metrumy/sass/_base.scss
+++ b/themes/metrumy/sass/_base.scss
@@ -17,15 +17,15 @@ html {
 }
 
 body {
-  background-color: $background-color;
-  color: $text-color;
+  background-color: $graphite;
+  color: $blue-skye;
   margin: 0;
   padding: 0;
   overflow-x: hidden;
 }
 
 a {
-  color: $text-color;
+  color: $blue-skye;
   text-decoration: none;
   border-bottom: 1px solid $blue-light;
   transition: border 0.1s ease-in;
@@ -36,7 +36,7 @@ a {
 }
 
 ::selection {
-  color: $text-color;
+  color: $black;
   background: $background-yellow;
 }
 
@@ -56,7 +56,7 @@ section {
 }
 
 .wrapper--media-background {
-  background-color: $graphite;
+  background-color: #000;
   width: 100%;
   margin: 0;
 }
