--- a/themes/metrumy/sass/_typography.scss
+++ b/themes/metrumy/sass/_typography.scss
@@ -1,5 +1,5 @@
 p {
-  color: $text-color;
+  color: $blue-skye;
   font-size: 1rem;
   text-align: left;
   margin: 0 auto 1rem;
@@ -21,7 +21,7 @@ h1,
 h2,
 h3,
 h4, {
-  color: $black;
+  color: $blue-skye;
   font-weight: bold;
   margin: 1em 0;
 }
@@ -30,7 +30,7 @@ h1 a,
 h2 a,
 h3 a,
 h4 a {
-  color: $black;
+  color: $blue-skye;
 }
 
 h1, .h1-like {
@@ -50,7 +50,7 @@ h1, .h1-like {
 h2, .h2-like {
   font-size: scale1(11);
   line-height: 1.25;
-  color: $black;
+  color: $blue-skye;
   margin-top: scale1(12);
   margin-bottom: scale1(11);
   
@@ -143,7 +143,7 @@ li code {
 }
 
 .secondary {
-  color: $grey-dark;
+  color: $grey;
 }
 
 .article-title {
