--- a/themes/metrumy/sass/_variables.scss
+++ b/themes/metrumy/sass/_variables.scss
@@ -18,7 +18,7 @@ $blue-light:          #44aaee;
 $blue-skye:           #cddddd;
 $aquamarine:          #77ddff;
 $purple:              #5500aa;
-$purple-light:        #7700ff;
+$purple-light:        #9988cc;
 $grey:                #888;
 $grey-light:            lighten($grey, 40%);
 $grey-dark:             darken($grey, 10%);
@@ -28,7 +28,7 @@ $yellow:              #ffee66;
 $yellow-light:        #ffeedd;
 $background-yellow:   #ffee99;
 $orange:              #ff6622;
-$orange-light:        #ff9922;
+$orange-light:        #ddbb77;
 $orange-deep:         #dd4433;
 $night:               #222233;
 $sand:                #eee6dd;
