--- a/themes/metrumy/sass/_base.scss
+++ b/themes/metrumy/sass/_base.scss
@@ -22,6 +22,9 @@ body {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
+  @media print {
+    color: $grey-dark;
+  }
 }
 
 a {
@@ -32,6 +35,11 @@ a {
 
   &:active, &:hover {
     border-bottom: 2px solid $blue-light;
+  }
+
+  @media print {
+    color: $grey-dark;
+    border-bottom: 1px solid;
   }
 }
 
@@ -145,7 +153,6 @@ hr {
 }
 
 footer {
-  color: $grey-dark;
   font-size: 1em;
   @include wrapper-mid;
   margin: scale1(14) auto 0;
