ui redesign (color palette)

--- a/themes/metrumy/sass/_variables.scss
+++ b/themes/metrumy/sass/_variables.scss
@@ -15,20 +15,20 @@ $green-light:         #33dd55;
 $blue:                #2233dd;
 $blue-dark:             darken($blue, 10%);
 $blue-light:          #44aaee;
-$blue-skye:           #cddddd;
+$blue-skye:           #cdd;
 $aquamarine:          #77ddff;
 $purple:              #5500aa;
-$purple-light:        #9988cc;
+$purple-light:        #9966ee;
 $grey:                #888;
 $grey-light:            lighten($grey, 40%);
 $grey-dark:             darken($grey, 10%);
 
-$graphite:            #242424;
+$graphite:            #353535;
 $yellow:              #ffee66;
 $yellow-light:        #ffeedd;
 $background-yellow:   #ffee99;
 $orange:              #ff6622;
-$orange-light:        #ddbb77;
+$orange-light:        #eecc66;
 $orange-deep:         #dd4433;
 $night:               #222233;
 $sand:                #eee6dd;
